Mostly finished, still need wrap styling for correct layout

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,6 +21,24 @@ nav {
 
 h2 {
   font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+div.main {
+  justify-content: flex-start;
+}
+
+h1.imgtext {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
+  display: flex;
+}
+
+h2.imgtext {
+  font-family: Georgia;
   font-weight: bold;
   font-size: 30px;
   color: white;
@@ -38,6 +56,7 @@ div.main {
 
 div.mainleftimg {
   background-color: orange;
+  display: flex;
 }
 
 div.main-left {
@@ -53,10 +72,15 @@ div.img-content {
 
 div.img-contentearth {
   background-color: orange;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  height: 300px;
 }
 
 div.img-contentcamera {
   background-color: orange;
+  display: flex;
 }
 
 div.main-mid {
@@ -72,15 +96,45 @@ div.mid-content{
 
 div.img-contentcat {
   background-color: orange;
+  display: flex;
 }
 
 div.main-right {
   width: 240px;
   border: 3px solid Black;
   display: flex;
+  flex-direction: column;
+  border: 2px 0px 2px 0px;
+  border-color: black;
+}
 
+h3.news {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+li.news {
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
 }
 
 div.right-content {
   background-image: url(https://github.com/sahafa7/mytimes/resources/images/img-news-bite.png)
+}
+
+div.footer {
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;'
+}
+
+h3.footer {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
 }
